trunk/XYZParser_3AC/src/ast/XYZParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. XYZParser.java */
package ast;

import java.io.*;
import java.util.*;
import semantic.*;


/** XYZParser. */
public class XYZParser/*@bgen(jjtree)*/implements XYZParserTreeConstants, XYZParserConstants {/*@bgen(jjtree)*/
  protected static JJTXYZParserState jjtree = new JJTXYZParserState();
  public static String undefinedInfo;
	public static String redefinedInfo;
	public static String duplicateMethodInfo;
	public static ProgramDescriptor programDescriptor;
	public static String weightInfo;
	public static String mismatchInfo;
	public static String tacInfo;
	public static XYZParser parser;
  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
        try{

                File file = new File("test.xyz");
                FileInputStream stream = new FileInputStream(file);
        parser = new XYZParser(stream);

        SimpleNode n = parser.parse();
        n.dump("");

        TypeCheckingVistor tcv = new TypeCheckingVistor();
        n.jjtAccept(tcv, null);

        TestVisitor v = new TestVisitor();
        n.jjtAccept(v, null);
        System.out.println("StatementCount:"+v.getStatementCount());
        System.out.println("TotalWeight:"+v.getTotalWeight());

        //parser.lexicalAnalyze();
        stream.close();

        /*
        stream = new FileInputStream(file);
        parser.ReInit(stream);
        parser.outputStatisticsFile();*/
        }catch(Exception e){
                e.printStackTrace();
                }
          }
  public static void check(File file, boolean showFinal) {
		try {

			// File file = new File("test.xyz");
			FileInputStream stream = new FileInputStream(file);
			parser = new XYZParser(stream);

			SimpleNode n = parser.parse();
			n.dump("");

			TypeCheckingVistor tcv = new TypeCheckingVistor();
			tcv.setShowFinal(showFinal);
			n.jjtAccept(tcv, null);

			undefinedInfo = tcv.getUndefinedInfo();
			duplicateMethodInfo = Handler.getInfo(tcv.getDuplicateMethodMessage());
			programDescriptor = tcv.getProgramDescriptor();
			mismatchInfo = tcv.getMismatchInfo();
			redefinedInfo = tcv.getRedefinedInfo();
			tacInfo = tcv.getTacInfo().content;

			// tcv.setDuplicate();

			/*TestVisitor v = new TestVisitor();
			n.jjtAccept(v, null);
			
			weightInfo = v.getParseMessage().toString()+
						"StatementCount:" + v.getStatementCount()+
						"\nTotalWeight:" + v.getTotalWeight();*/
			//System.out.println("StatementCount:" + v.getStatementCount());
			//System.out.println("TotalWeight:" + v.getTotalWeight());

			// parser.lexicalAnalyze();

			/*
			 * stream = new FileInputStream(file); parser.ReInit(stream);
			 * parser.outputStatisticsFile();
			 */
		} catch (Exception e) {
			e.printStackTrace();
		}
	}
  
  public static void reParse(File file, boolean showFinal){

	  try{
		  FileInputStream stream = new FileInputStream(file);
		  ReInit(stream);
		SimpleNode n = parser.parse();
		
	  TypeCheckingVistor tcv = new TypeCheckingVistor();
		tcv.setShowFinal(showFinal);
		n.jjtAccept(tcv, null);

		undefinedInfo = tcv.getUndefinedInfo();
		duplicateMethodInfo = Handler.getInfo(tcv.getDuplicateMethodMessage());
		programDescriptor = tcv.getProgramDescriptor();
		mismatchInfo = tcv.getMismatchInfo();
		redefinedInfo = tcv.getRedefinedInfo();
		tacInfo = tcv.getTacInfo().content;
	  }
	  catch (Exception e) {
			e.printStackTrace();
		}
  }

/** Root production. */
  static final public SimpleNode parse() throws ParseException {
 /*@bgen(jjtree) Root */
  Root jjtn000 = new Root(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Program();
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Program() throws ParseException {
  Program jjtn001 = new Program(JJTPROGRAM);
  boolean jjtc001 = true;
  jjtree.openNodeScope(jjtn001);
    try {
      MainClass();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        ClassDecl();
      }
    } catch (Throwable jjte001) {
  if (jjtc001) {
    jjtree.clearNodeScope(jjtn001);
    jjtc001 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte001 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte001;}
  }
  if (jjte001 instanceof ParseException) {
    {if (true) throw (ParseException)jjte001;}
  }
  {if (true) throw (Error)jjte001;}
    } finally {
  if (jjtc001) {
    jjtree.closeNodeScope(jjtn001, true);
  }
    }
  }

  static final public void MainClass() throws ParseException {
                              /*@bgen(jjtree) MainClass */
                              MainClass jjtn000 = new MainClass(JJTMAINCLASS);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(CLASS);
      t = ID();
      jj_consume_token(LBRACE);
      jj_consume_token(PUBLIC);
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(LPAREN);
      jj_consume_token(STRING);
      jj_consume_token(LBRACK);
      jj_consume_token(RBRACK);
      ID();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case DO:
        case WHILE:
        case PRINT:
        case LBRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Statement();
      }
      jj_consume_token(RBRACE);
      jj_consume_token(RBRACE);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
 jjtn000.setText("class " + t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ClassDecl() throws ParseException {
                              /*@bgen(jjtree) ClassDecl */
                              ClassDecl jjtn000 = new ClassDecl(JJTCLASSDECL);
                              boolean jjtc000 = true;
                              jjtree.openNodeScope(jjtn000);Token t;
    try {
      jj_consume_token(CLASS);
      t = ID();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
                    ExtendNode jjtn001 = new ExtendNode(JJTEXTENDNODE);
                    boolean jjtc001 = true;
                    jjtree.openNodeScope(jjtn001);
        try {
          ID();
        } catch (Throwable jjte001) {
                    if (jjtc001) {
                      jjtree.clearNodeScope(jjtn001);
                      jjtc001 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte001 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte001;}
                    }
                    if (jjte001 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte001;}
                    }
                    {if (true) throw (Error)jjte001;}
        } finally {
                    if (jjtc001) {
                      jjtree.closeNodeScope(jjtn001, true);
                    }
        }
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
        case INT:
        case BOOLEAN:
        case DOUBLE:
        case ID:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        Body();
      }
      jj_consume_token(RBRACE);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
 jjtn000.setText("class " + t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void Body() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case DOUBLE:
    case ID:
      VarDecl();
      break;
    case PUBLIC:
      MethodDecl();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Statement() throws ParseException {
                                  /*@bgen(jjtree) StatementNode */
  StatementNode jjtn000 = new StatementNode(JJTSTATEMENTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        IfStatement();
        break;
      case WHILE:
        WhileStatement();
        break;
      case DO:
        DoWhileStatement();
        break;
      case LBRACE:
        StatementBlock();
        break;
      case PRINT:
      case ID:
        SingleStatement();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void IfStatement() throws ParseException {
                                      /*@bgen(jjtree) IfStatementNode */
  IfStatementNode jjtn000 = new IfStatementNode(JJTIFSTATEMENTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      JudgeExp();
      jj_consume_token(RPAREN);
      Statement();
                                                   ElseNode jjtn001 = new ElseNode(JJTELSENODE);
                                                   boolean jjtc001 = true;
                                                   jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(ELSE);
      } finally {
                                                   if (jjtc001) {
                                                     jjtree.closeNodeScope(jjtn001, true);
                                                   }
      }
      Statement();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void WhileStatement() throws ParseException {
                                            /*@bgen(jjtree) WhileStatementNode */
  WhileStatementNode jjtn000 = new WhileStatementNode(JJTWHILESTATEMENTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      JudgeExp();
      jj_consume_token(RPAREN);
      Statement();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void DoWhileStatement() throws ParseException {
                                            /*@bgen(jjtree) DoWhileStatement */
  DoWhileStatement jjtn000 = new DoWhileStatement(JJTDOWHILESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DO);
      Statement();
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      JudgeExp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void StatementBlock() throws ParseException {
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case DO:
      case WHILE:
      case PRINT:
      case LBRACE:
      case ID:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      Statement();
    }
    jj_consume_token(RBRACE);
  }

  static final public void SingleStatement() throws ParseException {
                                              /*@bgen(jjtree) SingleStatementNode */
  SingleStatementNode jjtn000 = new SingleStatementNode(JJTSINGLESTATEMENTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINT:
        PrintStatement();
        break;
      case ID:
        AssignStatement();
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PrintStatement() throws ParseException {
                                             /*@bgen(jjtree) PrintStatementNode */
  PrintStatementNode jjtn000 = new PrintStatementNode(JJTPRINTSTATEMENTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRINT);
      jj_consume_token(LPAREN);
      Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void VarDecl() throws ParseException {
                              /*@bgen(jjtree) VarDeclNode */
                               VarDeclNode jjtn000 = new VarDeclNode(JJTVARDECLNODE);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t; String type;
    try {
      type = Type();
      t = ID();
      jj_consume_token(SEMI);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.setText(type + " " + t.image);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void MethodDecl() throws ParseException {
                                /*@bgen(jjtree) MethodNode */
                                MethodNode jjtn000 = new MethodNode(JJTMETHODNODE);
                                boolean jjtc000 = true;
                                jjtree.openNodeScope(jjtn000);Token t; String type;
    try {
      jj_consume_token(PUBLIC);
      type = Type();
      t = ID();
      jj_consume_token(LPAREN);
      FormalList();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case DO:
        case WHILE:
        case PRINT:
        case INT:
        case BOOLEAN:
        case DOUBLE:
        case LBRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        MethodBody();
      }
      ReturnStatement();
